...
            "state": "translated",
            "value": "使用 Google 继续"
          }
        }
      }
    },
    "Copy Link": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "复制链接"
          }
...
            "state": "translated",
            "value": "宠物友好评分"
          }
        }
      }
    },
    "PetNote": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "PetNote"
          }
...
